# docker

./: .dockerignore  .env.example  .firebaserc  .gitignore  .mcp.json  .pre-commit-config.yaml  .refactor-agent.example.yaml  .refactor-agent.yaml  CLAUDE.md  Dockerfile  GLOSSARY.md  Makefile  README.md  agent-schematic.md  cloudbuild.yaml  diff.txt  docker-compose.yml  firebase.json  ideas.md  knip.json  kubernetes-labs-README.md  nx.json  osv-scanner.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pydantic-ai-anthropic-compat-issue.md  pyproject.toml  tsconfig.base.json  vision.md
.claude/: settings.json
.cursor/: mcp.json
.github/: dependabot.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
api/: jobs.py  main.py  routes.py
apps/backend/: goals.txt  project.json  pyproject.toml  ruff.toml
apps/backend/scripts/: validate_triage.py
apps/backend/scripts/a2a/: check_a2a_security.py  probe_a2a.py  run_ast_refactor_mcp.py  test_a2a_collision.py  test_a2a_rename.py
apps/backend/scripts/langfuse/: create_triage_dataset.py  run_triage_experiment.py
apps/backend/scripts/mcp/: run_ast_refactor_mcp.py
apps/backend/scripts/seed/: seed_prompts.py
apps/backend/src/refactor_agent/: __init__.py  config.py
apps/backend/src/refactor_agent/a2a/: auth_middleware.py  bridge.py  executor.py  method_logging.py  models.py  probe_settings.py  server.py
apps/backend/src/refactor_agent/agent/: constants.py  runner.py  tools.py
apps/backend/src/refactor_agent/agentic/: __init__.py  error_taxonomy.py  feedback.py  git.py  logger.py  router.py  runner.py  triage.py  validator.py
apps/backend/src/refactor_agent/auth/: __init__.py  github_auth.py  models.py  oauth.py  user_store.py
apps/backend/src/refactor_agent/backend/: __init__.py  app.py  router.py
apps/backend/src/refactor_agent/ci/: __init__.py  __main__.py  config.py  refactor-check.example.yml  report.py  runner.py
apps/backend/src/refactor_agent/dashboard/: __main__.py  ingest.py  main.py  storage.py
apps/backend/src/refactor_agent/dashboard/routes/: __init__.py
apps/backend/src/refactor_agent/engine/: __init__.py
apps/backend/src/refactor_agent/engine/python/: ast_engine.py  libcst_engine.py
apps/backend/src/refactor_agent/engine/typescript/: ts_morph_engine.py
apps/backend/src/refactor_agent/evals/: __init__.py  langfuse_evals.py
apps/backend/src/refactor_agent/migration/: logger.py  models.py
apps/backend/src/refactor_agent/models/: prompt_config.py
apps/backend/src/refactor_agent/observability/: langfuse_config.py
apps/backend/src/refactor_agent/orchestrator/: agent.py  runner.py
apps/backend/src/refactor_agent/schedule/: __init__.py  executor.py  limits.py  logger.py  models.py  planner.py
apps/backend/src/refactor_agent/sync/: app.py  client.py  models.py  replica_ttl.py  server.py
apps/backend/src/refactor_agent/ui/: app.py
apps/backend/stubs/google/cloud/firestore/: __init__.pyi
apps/backend/tests/security/: conftest.py
apps/backend/tests/security/a2a/: __init__.py  test_a2a_security.py
apps/backend/tests/security/chainlit/: README.md
apps/backend/tests/test_a2a/: test_executor.py
apps/backend/tests/test_agentic/: __init__.py  test_error_taxonomy.py  test_feedback.py  test_git.py  test_router.py  test_runner.py  test_scope_spec.py  test_triage.py  test_validator.py
apps/backend/tests/test_auth/: __init__.py  test_middleware.py  test_oauth.py
apps/backend/tests/test_ci/: test_runner.py
apps/backend/tests/test_engine/: test_libcst_engine.py  test_ts_morph_project_engine.py
apps/backend/tests/test_migration/: test_models.py
apps/backend/tests/test_orchestrator/: __init__.py  test_deps.py  test_exception_narrowing.py
apps/backend/tests/test_schedule/: test_models.py  test_planner.py
config/: litellm.yaml
dashboard-ui/: .oxlintrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo
docker/: chainlit-schema.sql  entrypoint-chainlit.sh  entrypoint-cloudrun.sh  entrypoint.sh
docker-proxy-demo/: .env.example  .gitignore  BEST_PRACTICES.md  BROWSER-LAB.md  CHANGELOG.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  architecture-overview.mmd  compose.yaml  nginx.conf  traffic-allowed-blocked.mmd
docs/: README.md  a2a-server.md  agentic-patterns.md  architecture.md  chat-ui.md  ci-refactor-check.md  coding-rules.md  cursor-bridge.md  docker-deployment.md  getting-started.md  ideas.md  infra-beta-pricing.md  infra-dev-loop-tasks.md  infra-gcp.md  integrations.md  mcp-server.md  plan.md  releasing.md  resources.md  scaling-refactor-pipeline.md  sync-service.md  todo-prompts.md  troubleshooting.md  vscode-extension.md
functions/auth_register_device/: main.py  package.json  project.json  pyproject.toml
functions/auth_register_device/src/: index.ts
functions/email_notify/: main.py  models.py  package.json  project.json  pyproject.toml  requirements.txt
functions/email_notify/shared/src/functions_shared/: http_response.py
functions/email_notify/src/: index.ts
functions/github_webhook/: main.py  models.py  package.json  project.json  pyproject.toml
functions/github_webhook/shared/: pyproject.toml
functions/github_webhook/src/: index.ts  types.d.ts
functions/usage_digest/: main.py  package.json  project.json  pyproject.toml  tsconfig.json
functions/usage_digest/shared/: package.json
functions/usage_digest/shared/src/: http.ts
functions/usage_digest/src/: index.ts
infra/: .terraform.lock.hcl  README.md  apis.tf  artifact_registry.tf  cloudbuild_permissions.tf  cloudrun_a2a.tf  cloudrun_chainlit.tf  github_actions_sa.tf  github_secrets.tf  main.tf  outputs.tf  secrets.tf  secrets.tfvars.example  sentry.tf  variables.tf
lab-1-kubernetes-basics/: README.md
lab-2-kubernetes-advanced/: README.md
lab-3-kubernetes-helm/: README.md  helm-values.yaml  wordpress-values.yaml
lab-4-docker-debug-pascal-maker/: README.md  compose.yaml  solution.md
lab-4-kubernetes-ingress/: README.md
networking_demo/: compose.5a.external.yaml  compose.yaml  (+1 more)
(+553 files in other folders)
