[project]
name = "refactor-agent-workspace"
version = "0.1.0"
requires-python = ">=3.12"
description = "Refactor Agent monorepo workspace root"

[tool.uv.workspace]
members = [
  "apps/backend",
  "functions/email_notify",
  "functions/shared",
  "functions/usage_digest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/refactor_agent_workspace"]

# ---------------------------------------------------------------------------
# Ruff – linting & formatting (covers backend + functions)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88
src = [
  "apps/backend/src",
  "apps/backend/tests",
  "apps/backend/scripts",
  "apps/backend/playground",
  "functions",
  "scripts",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # bandit (security)
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "FBT",    # flake8-boolean-trap
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TC",     # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PGH",    # pygrep-hooks
    "PL",     # pylint (PLC, PLE, PLR, PLW)
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific
    "C90",    # mccabe complexity
    "D",      # pydocstyle
]
ignore = [
    "D100", "D104", "D105", "D106", "D107", "D203", "D213",
    "COM812", "ISC001", "TRY003", "EM101", "EM102",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 10
max-returns = 5
max-statements = 40

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["functions_shared", "playground", "refactor_agent"]
combine-as-imports = true

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"sentry".msg = "Use sentry-sdk for Python. The 'sentry' package is the legacy Sentry server, not the client SDK."
"typing.Dict" = { msg = "Use Pydantic BaseModel for structured data; see CLAUDE.md." }
"typing.TypedDict" = { msg = "Use Pydantic BaseModel for structured data; see CLAUDE.md." }

[tool.ruff.lint.per-file-ignores]
"apps/backend/tests/**/*.py" = [
    "S101", "S105", "S106", "PLR2004", "ARG", "D", "ANN", "SLF001", "FBT", "PT006",
    "PLC0415", "E501", "TC003", "PTH123", "SIM117", "INP001",
]
"apps/backend/tests/security/**/*.py" = ["S310", "S603"]
"functions/**/*.py" = [
    "T20", "INP001", "D", "PLC0415", "PLR2004", "ANN",
    "E501", "S310", "S110", "ARG001", "S105", "SIM105",
]
"apps/backend/scripts/**/*.py" = [
    "T20", "INP001", "D", "PLC0415", "PLR2004", "ANN",
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    "E501", "E402", "PTH123", "UP017", "S310", "S110",
]
"scripts/**/*.py" = [
    "T20", "INP001", "D", "PLC0415", "PLR2004", "ANN",
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    "E501", "E402", "PTH123", "S310", "S110", "PERF401",
    "SIM102", "ARG001",
]
"apps/backend/src/**/_compat.py" = ["PLC0415", "ANN", "F401"]
"apps/backend/playground/**/*.py" = ["T20", "D", "TC001"]

"apps/backend/src/refactor_agent/schedule/executor.py" = ["C901", "PLR0911", "TC001", "TC003"]
"apps/backend/src/refactor_agent/schedule/planner.py" = ["C901", "TC002", "PLC0415", "E501"]
"apps/backend/src/refactor_agent/ci/runner.py" = ["PLR0912", "PLR0915", "E501"]
"apps/backend/src/refactor_agent/ci/config.py" = ["E501"]
"apps/backend/src/refactor_agent/a2a/auth_middleware.py" = ["TC002", "PLR0911"]
"apps/backend/src/refactor_agent/a2a/executor.py" = [
    "E501", "PLR0911", "PLR0915", "TC001", "TC002",
]
"apps/backend/src/refactor_agent/agent/factory.py" = ["E501"]
"apps/backend/src/refactor_agent/agent/tools.py" = ["TC001", "TC002", "ARG001"]
"apps/backend/src/refactor_agent/engine/subprocess_engine.py" = ["TC003"]
"apps/backend/src/refactor_agent/engine/typescript/ts_morph_engine.py" = ["E501"]
"apps/backend/src/refactor_agent/schedule/models.py" = ["E501"]
"apps/backend/src/refactor_agent/orchestrator/agent.py" = ["E501"]
"apps/backend/src/refactor_agent/auth/**/*.py" = [
    "TC001", "TC002", "PLC0415", "S310", "PLR2004", "PLR0911", "TRY300",
    "E501", "RUF006",
]
"apps/backend/src/refactor_agent/sync/**/*.py" = [
    "TC002", "TC003", "E501", "ASYNC240", "PLR0911", "PLR0912", "PLR0915",
    "C901", "S104", "S603", "S607", "D301", "TRY300",
]
"apps/backend/src/refactor_agent/ui/**/*.py" = [
    "D", "ANN", "T20", "ASYNC240", "TC001", "E501", "S310", "PLR2004",
    "LOG015", "C901", "PLR0912", "PLR0915",
]
"apps/backend/src/refactor_agent/dashboard/**/*.py" = [
    "TC001", "TC002", "TC003", "PLR0913", "S104", "PLC0415", "S608", "ARG001",
]
"functions/**/http_response.py" = ["TC003", "UP047"]
"functions/email_notify/main.py" = ["FBT001"]
"functions/email_notify/models.py" = ["PLR0911", "TC003"]
