[project]
name = "email-notify"
version = "0.1.0"
description = "Firestore onCreate users -> Resend admin email Cloud Function"
requires-python = ">=3.12"
dependencies = [
    "functions-framework>=3.0,<5",
]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
