[project]
name = "functions-shared"
version = "0.1.0"
description = "Shared models and utilities for Cloud Functions"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/functions_shared"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
